--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -7,17 +7,13 @@
 }
 
 .main__text {
-  color: #ffffff !important;
+  color: #fff !important;
   font-family: "Orbitron", "Roboto", "Arial" !important;
   font-size: 2.5rem !important;
   margin: 0 0 40px !important;
   text-transform: uppercase !important;
   letter-spacing: 2px !important;
-  background: linear-gradient(45deg, #ffffff, #377b98) !important;
-  -webkit-background-clip: text !important;
-  -webkit-text-fill-color: transparent !important;
-  opacity: 0 !important;
-  animation: fadeInDown 1s ease forwards !important;
+  opacity: 1 !important;
 }
 
 .main__wrapper {
